--- a/package.json
+++ b/package.json
@@ -1,18 +1,28 @@
 {
-  "name": "mrp-webdev-test",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.10.6",
-    "express-handlebars": "^1.1.0",
-    "morgan": "^1.5.0",
-    "request": "^2.51.0"
-  }
+    "name": "mrp-webdev-test",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node app"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.10.6",
+        "express-handlebars": "^1.1.0",
+        "morgan": "^1.5.0",
+        "request": "^2.51.0",
+        "bower": "*1.3.12",
+        "gulp": "*3.8.11",
+        "gulp-concat": "*2.5.2",
+        "gulp-embedlr": "*0.5.2",
+        "gulp-less": "*3.0.1",
+        "gulp-plumber": "*0.6.6"
+    }
 }
+
+
+
+
