--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "app.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
+        "postinstall": "bower cache clean && bower install gulp",
         "start": "node app"
     },
     "author": "",
