--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,9 @@
     "test",
     "tests"
   ],
+    "engines": {
+        "node": "0.10.x"
+    },
   "dependencies": {
     "angular": "~1.3.14",
     "angular-resource": "~1.3.14",
