--- a/bower.json
+++ b/bower.json
@@ -14,12 +14,13 @@
     "test",
     "tests"
   ],
-    "engines": {
-        "node": "0.10.x"
-    },
+  "engines": {
+    "node": "0.10.x"
+  },
   "dependencies": {
     "angular": "~1.3.14",
     "angular-resource": "~1.3.14",
-    "ngInfiniteScroll": "1.0.0"
+    "ngInfiniteScroll": "1.0.0",
+    "jquery": "~2.1.3"
   }
 }
