--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "postinstall": "bower cache clean && bower install && gulp",
     "start": "node app"
   },
+    "engines": {
+        "node": "0.10.28"
+    },
   "author": "",
   "license": "ISC",
   "dependencies": {
